--- a/while&question&repeat.ipynb
+++ b/while&question&repeat.ipynb
@@ -822,7 +822,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100~999달러 사이의 값을 입력하세요100\n",
+      "111200 원\n"
+     ]
+    }
+   ],
+   "source": [
+    "prices = int(input(\"100~999달러 사이의 값을 입력하세요\"))\n",
+    "exchange_rate = 1112\n",
+    "\n",
+    "if prices == 100:\n",
+    "    won = prices * exchange_rate\n",
+    "else:\n",
+    "    int(input(\"100달러를 입력하셔야지 계산이 종료됩니다\"))\n",
+    "    won = prices * exchange_rate\n",
+    "print(won ,\"원\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -871,6 +897,32 @@
     "\n",
     "출력: <br>\n",
     "111200 원"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "달러 또는 위안 금액을 입력하시면 환전해드립니다300위안\n",
+      "51300 원\n"
+     ]
+    }
+   ],
+   "source": [
+    "money = input(\"달러 또는 위안 금액을 입력하세요 ex)100달러\")\n",
+    "\n",
+    "\n",
+    "if money[3:] == '달러':\n",
+    "    print(int(money[:3]) * 1112 , '원')\n",
+    "elif money[3:] == '위안':\n",
+    "    print(int(money[:3]) * 171 , '원')\n",
+    "else:\n",
+    "    print(\"올바른 명칭으로 금액을 입력하세요\")"
    ]
   },
   {
@@ -929,6 +981,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100부터 999까지 달러, 위안,엔 금액을 입력하세요 ex)100 달러100 엔\n",
+      "101000 원\n"
+     ]
+    }
+   ],
+   "source": [
+    "money = input(\"100부터 999까지 달러, 위안,엔 금액을 입력하세요 ex)100 달러\")\n",
+    "exchange_rate = {'달러':1112 ,'위안':171,'엔':1010 }\n",
+    "\n",
+    "if money[4:] == '달러':\n",
+    "    print(int(money[:4]) * 1112 , '원')\n",
+    "elif money[4:] == '위안':\n",
+    "    print(int(money[:4]) * 171 , '원')\n",
+    "elif money[4:] == '엔':\n",
+    "    print(int(money[:4]) * 1010 , '원')\n",
+    "else:\n",
+    "    print(\"올바른 단위를 입력해주세요\")\n",
+    "    \n",
+    "#데이터 형태가 리스트이기때문에 번거롭게 if문을 돌릴필요가없다"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
    "outputs": [
@@ -976,6 +1058,96 @@
     "9 X 8 = 72\n",
     "9 X 9 = 81\n",
     "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 x 1 = 2\n",
+      "2 x 2 = 4\n",
+      "2 x 3 = 6\n",
+      "2 x 4 = 8\n",
+      "2 x 5 = 10\n",
+      "2 x 6 = 12\n",
+      "2 x 7 = 14\n",
+      "2 x 8 = 16\n",
+      "2 x 9 = 18\n",
+      "3 x 1 = 3\n",
+      "3 x 2 = 6\n",
+      "3 x 3 = 9\n",
+      "3 x 4 = 12\n",
+      "3 x 5 = 15\n",
+      "3 x 6 = 18\n",
+      "3 x 7 = 21\n",
+      "3 x 8 = 24\n",
+      "3 x 9 = 27\n",
+      "4 x 1 = 4\n",
+      "4 x 2 = 8\n",
+      "4 x 3 = 12\n",
+      "4 x 4 = 16\n",
+      "4 x 5 = 20\n",
+      "4 x 6 = 24\n",
+      "4 x 7 = 28\n",
+      "4 x 8 = 32\n",
+      "4 x 9 = 36\n",
+      "5 x 1 = 5\n",
+      "5 x 2 = 10\n",
+      "5 x 3 = 15\n",
+      "5 x 4 = 20\n",
+      "5 x 5 = 25\n",
+      "5 x 6 = 30\n",
+      "5 x 7 = 35\n",
+      "5 x 8 = 40\n",
+      "5 x 9 = 45\n",
+      "6 x 1 = 6\n",
+      "6 x 2 = 12\n",
+      "6 x 3 = 18\n",
+      "6 x 4 = 24\n",
+      "6 x 5 = 30\n",
+      "6 x 6 = 36\n",
+      "6 x 7 = 42\n",
+      "6 x 8 = 48\n",
+      "6 x 9 = 54\n",
+      "7 x 1 = 7\n",
+      "7 x 2 = 14\n",
+      "7 x 3 = 21\n",
+      "7 x 4 = 28\n",
+      "7 x 5 = 35\n",
+      "7 x 6 = 42\n",
+      "7 x 7 = 49\n",
+      "7 x 8 = 56\n",
+      "7 x 9 = 63\n",
+      "8 x 1 = 8\n",
+      "8 x 2 = 16\n",
+      "8 x 3 = 24\n",
+      "8 x 4 = 32\n",
+      "8 x 5 = 40\n",
+      "8 x 6 = 48\n",
+      "8 x 7 = 56\n",
+      "8 x 8 = 64\n",
+      "8 x 9 = 72\n",
+      "9 x 1 = 9\n",
+      "9 x 2 = 18\n",
+      "9 x 3 = 27\n",
+      "9 x 4 = 36\n",
+      "9 x 5 = 45\n",
+      "9 x 6 = 54\n",
+      "9 x 7 = 63\n",
+      "9 x 8 = 72\n",
+      "9 x 9 = 81\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dan in range(2,10):\n",
+    "    for number in range(1,10):\n",
+    "            print(dan,\"x\",number,\"=\", dan * number)"
    ]
   },
   {
@@ -1069,13 +1241,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1105,35 +1270,79 @@
     "4 X 7 = 28\n",
     "4 X 8 = 32\n",
     "4 X 9 = 36\n",
-    "5 X 2 = 10\n",
-    "5 X 4 = 20\n",
-    "5 X 6 = 30\n",
-    "5 X 8 = 40\n",
-    "6 X 2 = 12\n",
-    "6 X 3 = 18\n",
-    "6 X 4 = 24\n",
-    "6 X 5 = 30\n",
-    "6 X 6 = 36\n",
-    "6 X 7 = 42\n",
-    "6 X 8 = 48\n",
-    "6 X 9 = 54\n",
-    "7 X 2 = 14\n",
-    "7 X 4 = 28\n",
-    "7 X 6 = 42\n",
-    "7 X 8 = 56\n",
-    "8 X 2 = 16\n",
-    "8 X 3 = 24\n",
-    "8 X 4 = 32\n",
-    "8 X 5 = 40\n",
-    "8 X 6 = 48\n",
-    "8 X 7 = 56\n",
-    "8 X 8 = 64\n",
-    "8 X 9 = 72\n",
-    "9 X 2 = 18\n",
-    "9 X 4 = 36\n",
-    "9 X 6 = 54\n",
-    "9 X 8 = 72\n",
+    "...\n",
     "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 x 1 = 2\n",
+      "2 x 2 = 4\n",
+      "2 x 3 = 6\n",
+      "2 x 4 = 8\n",
+      "2 x 5 = 10\n",
+      "2 x 6 = 12\n",
+      "2 x 7 = 14\n",
+      "2 x 8 = 16\n",
+      "2 x 9 = 18\n",
+      "3 x 2 = 6\n",
+      "3 x 4 = 12\n",
+      "3 x 6 = 18\n",
+      "3 x 8 = 24\n",
+      "4 x 1 = 4\n",
+      "4 x 2 = 8\n",
+      "4 x 3 = 12\n",
+      "4 x 4 = 16\n",
+      "4 x 5 = 20\n",
+      "4 x 6 = 24\n",
+      "4 x 7 = 28\n",
+      "4 x 8 = 32\n",
+      "4 x 9 = 36\n",
+      "5 x 2 = 10\n",
+      "5 x 4 = 20\n",
+      "5 x 6 = 30\n",
+      "5 x 8 = 40\n",
+      "6 x 1 = 6\n",
+      "6 x 2 = 12\n",
+      "6 x 3 = 18\n",
+      "6 x 4 = 24\n",
+      "6 x 5 = 30\n",
+      "6 x 6 = 36\n",
+      "6 x 7 = 42\n",
+      "6 x 8 = 48\n",
+      "6 x 9 = 54\n",
+      "7 x 2 = 14\n",
+      "7 x 4 = 28\n",
+      "7 x 6 = 42\n",
+      "7 x 8 = 56\n",
+      "8 x 1 = 8\n",
+      "8 x 2 = 16\n",
+      "8 x 3 = 24\n",
+      "8 x 4 = 32\n",
+      "8 x 5 = 40\n",
+      "8 x 6 = 48\n",
+      "8 x 7 = 56\n",
+      "8 x 8 = 64\n",
+      "8 x 9 = 72\n",
+      "9 x 2 = 18\n",
+      "9 x 4 = 36\n",
+      "9 x 6 = 54\n",
+      "9 x 8 = 72\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dan in range(2,10):\n",
+    "    for number in range(1,10):\n",
+    "        if dan * number % 2 == 0:\n",
+    "            print(dan , \"x\",number,\"=\", dan * number)"
    ]
   },
   {
@@ -1243,8 +1452,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 49,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6207동 101호\n",
+      "6207동 102호\n",
+      "6207동 103호\n",
+      "6207동 104호\n",
+      "\n",
+      "6208동 101호\n",
+      "6208동 102호\n",
+      "6208동 103호\n",
+      "6208동 104호\n",
+      "\n",
+      "6209동 101호\n",
+      "6209동 102호\n",
+      "6209동 103호\n",
+      "6209동 104호\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dongs = [\"6209동\", \"6208동\", \"6207동\"]\n",
+    "hos = [\"101호\", \"102호\", \"103호\", \"104호\"]\n",
+    "\n",
+    "dongs.sort()\n",
+    "\n",
+    "for dong in dongs:\n",
+    "    for ho in hos:\n",
+    "        print(dong,ho)\n",
+    "    print() #프린트함수 자체에 한칸띄우는 \\n속성이 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
