--- a/function_test.ipynb
+++ b/function_test.ipynb
@@ -17,6 +17,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Fun coding\n"
+     ]
+    }
+   ],
+   "source": [
+    "def funcoding():\n",
+    "    print(\"Fun coding\")\n",
+    "\n",
+    "funcoding()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Fun Coding\n"
      ]
     }
@@ -42,6 +62,26 @@
     "\n",
     "Fun Coding\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "성공\n"
+     ]
+    }
+   ],
+   "source": [
+    "def funcoding(message):\n",
+    "    print(message)\n",
+    "\n",
+    "funcoding(\"성공\")"
    ]
   },
   {
@@ -80,6 +120,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def plus(a,b,c):\n",
+    "    print(a+b+c)\n",
+    "\n",
+    "plus(4,5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -112,6 +172,27 @@
     "\n",
     "6\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply(a,b):\n",
+    "    return a * b\n",
+    "\n",
+    "result = multiply(5,5)\n",
+    "print(result)"
    ]
   },
   {
@@ -171,6 +252,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 25 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(a,b,c): #java와 다르게 파라미터의 데이터형을 지정할 필요 없음\n",
+    "    if c == \"*\":\n",
+    "        return a * b\n",
+    "    elif c == \"+\":\n",
+    "        return a + b\n",
+    "    else :\n",
+    "        return 0\n",
+    "    \n",
+    "data1 = func(5,5,\"+\")\n",
+    "data2 = func(5,5,\"*\")\n",
+    "data3 = func(5,5,\"-\")\n",
+    "\n",
+    "print(data1,data2,data3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -210,6 +320,46 @@
     "### Exercise 69. 함수\n",
     "Exercise 68에서 작성한 함수에 사칙연산 기능을 \"-\" (빼기) 와 \"/\" (나누기) 도 지원하도록 추가해서, 호출해보세요.<br>\n",
     "단, \"/\" 일 경우, 두번째 인자가 0이면, -1 을 리턴하도록 작성하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 3 3 -1 1.5\n",
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(a,b,c): #java와 다르게 파라미터의 데이터형을 지정할 필요 없음\n",
+    "    if c == \"*\":\n",
+    "        return a * b\n",
+    "    elif c == \"+\":\n",
+    "        return a + b\n",
+    "    elif c == \"-\":\n",
+    "        return a - b\n",
+    "    elif c == \"/\":\n",
+    "        if b == 0:\n",
+    "            return -1\n",
+    "        else:\n",
+    "            return a / b\n",
+    "    else :\n",
+    "        return 0\n",
+    "\n",
+    "data1 = func(3,0,\"*\")\n",
+    "data2 = func(3,0,\"+\")\n",
+    "data3 = func(3,0,\"-\")\n",
+    "data4 = func(3,0,\"/\")\n",
+    "data5 = func(3,2,\"/\")\n",
+    "\n",
+    "print(data1,data2,data3,data4,data5)\n",
+    "print(type(None))"
    ]
   },
   {
@@ -280,6 +430,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['성', '공']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def func(a,b):\n",
+    "    data = list()\n",
+    "    if \n",
+    "    return list(a)\n",
+    "\n",
+    "func(\"성공\",3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -311,7 +486,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -325,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.13"
   },
   "nbTranslate": {
    "displayLangs": [
