function.test final

--- a/function_test.ipynb
+++ b/function_test.ipynb
@@ -430,16 +430,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['성', '공']"
+       "['성공', '성공', '성공']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,23 +456,28 @@
    "source": [
     "def func(a,b):\n",
     "    data = list()\n",
-    "    if \n",
-    "    return list(a)\n",
+    "    for string in range(b):\n",
+    "        print(string)\n",
+    "        data.append(a)\n",
+    "    return data\n",
     "\n",
     "func(\"성공\",3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Fun', 'Fun', 'Fun']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Fun', 'Fun', 'Fun']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
