Readmd에 python공부 관련 목적 및 계획 정리, naver open api + 크롤링 활용하기 연습 추가

--- a/crawling/crawling_openapi.ipynb
+++ b/crawling/crawling_openapi.ipynb
@@ -34,7 +34,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': '현대모비스 &apos;SW에 眞心&apos; 23 알고리즘 경진대회로 숨은 인재 찾아', 'originallink': 'http://www.kdfnews.com/news/articleView.html?idxno=112067', 'link': 'http://www.kdfnews.com/news/articleView.html?idxno=112067', 'description': '총 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하고, 제한된 시간 내에 문제를 풀고 소스코드를 제출하는 방식이다. 현대모비스의 사업 특성을 고려한 임베디드(내장형 시스템) 개발에 초점을 맞춰 메모리... ', 'pubDate': 'Fri, 16 Jun 2023 12:24:00 +0900'}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/3w/3fgbsfvd3vz0f0ybpdxgm0f40000gn/T/ipykernel_4302/2688586701.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0mjson_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'items'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 86\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'items'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "data = \"\"\"\n",
+    "    {\n",
+    "    \"lastBuildDate\": \"Fri, 16 Jun 2023 12:48:34 +0900\",\n",
+    "    \"total\": 7703,\n",
+    "    \"start\": 1,\n",
+    "    \"display\": 10,\n",
+    "    \"items\": [\n",
+    "        {\n",
+    "            \"title\": \"현대모비스 &apos;SW에 眞心&apos; 23 알고리즘 경진대회로 숨은 인재 찾아\",\n",
+    "            \"originallink\": \"http://www.kdfnews.com/news/articleView.html?idxno=112067\",\n",
+    "            \"link\": \"http://www.kdfnews.com/news/articleView.html?idxno=112067\",\n",
+    "            \"description\": \"총 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하고, 제한된 시간 내에 문제를 풀고 소스코드를 제출하는 방식이다. 현대모비스의 사업 특성을 고려한 임베디드(내장형 시스템) 개발에 초점을 맞춰 메모리... \",\n",
+    "            \"pubDate\": \"Fri, 16 Jun 2023 12:24:00 +0900\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"title\": \"“1등상은 스포티지”…현대모비스, ‘2023 알고리즘 경진대회’ 개최\",\n",
+    "            \"originallink\": \"https://www.mk.co.kr/article/10761609\",\n",
+    "            \"link\": \"https://n.news.naver.com/mnews/article/009/0005144938?sid=103\",\n",
+    "            \"description\": \"총 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하며, 제한 시간 내에 문제를 풀고 소스코드를 제출하는 방식이다. 현대모비스의 사업 특성을 고려한 임베디드(내장형 시스템) 개발에 초점을 맞춰 메모리... \",\n",
+    "            \"pubDate\": \"Fri, 16 Jun 2023 12:24:00 +0900\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"title\": \"현대모비스, 알고리즘 경진대회 개최…숨은 SW인재 찾는다\",\n",
+    "            \"originallink\": \"https://www.dnews.co.kr/uhtml/view.jsp?idxno=202306161211154130365\",\n",
+    "            \"link\": \"https://www.dnews.co.kr/uhtml/view.jsp?idxno=202306161211154130365\",\n",
+    "            \"description\": \"총 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하며, 제한된 시간 내에 문제를 풀고 소스코드를 제출하는 방식이다. 현대모비스의 사업 특성을 고려한 임베디드(내장형 시스템) 개발에 초점을 맞춰... \",\n",
+    "            \"pubDate\": \"Fri, 16 Jun 2023 12:22:00 +0900\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"title\": \"현대모비스, 2023 알고리즘 경진대회 진행\",\n",
+    "            \"originallink\": \"http://autotimes.hankyung.com/apps/news.sub_view?popup=0&nid=03&c1=03&c2=03&c3=00&nkey=202306161200191\",\n",
+    "            \"link\": \"http://autotimes.hankyung.com/apps/news.sub_view?popup=0&nid=03&c1=03&c2=03&c3=00&nkey=202306161200191\",\n",
+    "            \"description\": \"총 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하며 제한된 시간 내에 문제를 풀고 소스코드를 제출하는 방식이다. 현대모비스의 사업 특성을 고려한 임베디드(내장형 시스템) 개발에 초점을 맞춰 메모리... \",\n",
+    "            \"pubDate\": \"Fri, 16 Jun 2023 12:02:00 +0900\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"title\": \"현대모비스, 알고리즘 경진대회 개최…상위권 서류면접 면제\",\n",
+    "            \"originallink\": \"https://www.viva100.com/main/view.php?key=20230616010004611\",\n",
+    "            \"link\": \"https://www.viva100.com/main/view.php?key=20230616010004611\",\n",
+    "            \"description\": \"총 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하며, 제한시간 안에 문제를 풀고 소스코드를 제출하는 방식이다. 부문별 1등에게는 기아의 최신형 스포티지 하이브리드 차량을 상품으로 주는 등 입상자에게... \",\n",
+    "            \"pubDate\": \"Fri, 16 Jun 2023 11:44:00 +0900\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"title\": \"현대모비스 &apos;알고리즘 경진대회&apos; 개최…&quot;SW 우수인재 발굴&quot;\",\n",
+    "            \"originallink\": \"http://www.newsworks.co.kr/news/articleView.html?idxno=718131\",\n",
+    "            \"link\": \"http://www.newsworks.co.kr/news/articleView.html?idxno=718131\",\n",
+    "            \"description\": \"총 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하며, 제한된 시간 내에 문제를 풀고 소스코드를 제출하는 방식이다. 현대모비스의 사업 특성을 고려한 임베디드(내장형 시스템) 개발에 초점을 맞춰 메모리... \",\n",
+    "            \"pubDate\": \"Fri, 16 Jun 2023 11:44:00 +0900\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"title\": \"&apos;SW에 진심&apos; 현대모비스, 알고리즘 경진대회로 숨은 인재 찾는다\",\n",
+    "            \"originallink\": \"http://www.goodkyung.com/news/articleView.html?idxno=210022\",\n",
+    "            \"link\": \"http://www.goodkyung.com/news/articleView.html?idxno=210022\",\n",
+    "            \"description\": \"총 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하며 제한된 시간 내에 문제를 풀고 소스코드를 제출하는 방식이다. 현대모비스의 사업 특성을 고려한 임베디드(내장형 시스템) 개발에 초점을 맞춰 메모리... \",\n",
+    "            \"pubDate\": \"Fri, 16 Jun 2023 11:32:00 +0900\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"title\": \"“SW 인재 발굴” 현대모비스 알고리즘 경진대회\",\n",
+    "            \"originallink\": \"http://news.heraldcorp.com/view.php?ud=20230616000337\",\n",
+    "            \"link\": \"https://n.news.naver.com/mnews/article/016/0002157151?sid=101\",\n",
+    "            \"description\": \"일반부에서 각각 예선을 통과한 상위 50명씩, 총 100명이 본선에 올라 실력을 겨룬다. 모두 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하며, 제한된 시간 내에 문제를 풀고 소스코드를 제출하는 방식이다.\",\n",
+    "            \"pubDate\": \"Fri, 16 Jun 2023 11:27:00 +0900\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"title\": \"현대모비스, 2023 알고리즘 경진대회 열어 숨은 인재 찾는다\",\n",
+    "            \"originallink\": \"https://www.megaeconomy.co.kr/news/newsview.php?ncode=1065579252091570\",\n",
+    "            \"link\": \"https://www.megaeconomy.co.kr/news/newsview.php?ncode=1065579252091570\",\n",
+    "            \"description\": \"총 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하며, 제한된 시간 내에 문제를 풀고 소스코드를 제출하는 방식이다. 현대모비스의 사업 특성을 고려한 임베디드(내장형 시스템) 개발에 초점을 맞춰 메모리... \",\n",
+    "            \"pubDate\": \"Fri, 16 Jun 2023 11:24:00 +0900\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"title\": \"현대모비스, 2023알고리즘 경진대회 개최...SW 우수 인재 발굴\",\n",
+    "            \"originallink\": \"https://www.smartfn.co.kr/article/view/sfn202306160026\",\n",
+    "            \"link\": \"https://www.smartfn.co.kr/article/view/sfn202306160026\",\n",
+    "            \"description\": \"총 4종류의 프로그래밍 언어(C, C++, JAVA, <b>Python</b>) 사용이 가능하며, 제한된 시간 내에 문제를 풀고 소스코드를 제출하는 방식이다. 현대모비스의 사업 특성을 고려한 임베디드(내장형 시스템) 개발에 초점을 맞춰 메모리... \",\n",
+    "            \"pubDate\": \"Fri, 16 Jun 2023 11:20:00 +0900\"\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "json_data = json.loads(data)\n",
+    "print(json_data['items'][0])\n",
+    "# print(json_data['items']['title']) #인덱싱으로 인식하기때문에 문자열이아니라 정수로 인덱싱해야한다.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "two\n",
+      "three\n",
+      "four\n",
+      "five\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = ['one', 'two', 'three', 'four', 'five']\n",
+    "   \n",
+    "for n in numbers:\n",
+    "    print(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +182,8 @@
      "output_type": "stream",
      "text": [
       "MHL 케이블 (아이폰, <b>안드로이드</b> 스마트폰 HDMI TV연결)\n",
-      "https://search.shopping.naver.com/gate.nhn?id=10782444869\n"
+      "https://search.shopping.naver.com/gate.nhn?id=10782444869\n",
+      "10\n"
      ]
     }
    ],
@@ -161,9 +302,10 @@
     "}\n",
     "\"\"\"\n",
     "\n",
-    "json_data = json.loads(data)\n",
+    "json_data = json.loads(data) #loads() 에 데이터를 넣으면 json을 파싱한다.\n",
     "print (json_data['items'][0]['title'])\n",
-    "print (json_data['items'][0]['link'])\n"
+    "print (json_data['items'][0]['link'])\n",
+    "print(json_data['display'])\n"
    ]
   },
   {
@@ -209,8 +351,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lastBuildDate': 'Fri, 16 Jun 2023 13:57:41 +0900',\n",
+       " 'total': 12333741,\n",
+       " 'start': 1,\n",
+       " 'display': 10,\n",
+       " 'items': [{'title': 'Apple <b>아이폰</b> 14 프로 256GB [자급제]',\n",
+       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=34561756621',\n",
+       "   'image': 'https://shopping-phinf.pstatic.net/main_3456175/34561756621.20220929142551.jpg',\n",
+       "   'lprice': '1566170',\n",
+       "   'hprice': '',\n",
+       "   'mallName': '네이버',\n",
+       "   'productId': '34561756621',\n",
+       "   'productType': '1',\n",
+       "   'brand': 'Apple',\n",
+       "   'maker': 'Apple',\n",
+       "   'category1': '디지털/가전',\n",
+       "   'category2': '휴대폰',\n",
+       "   'category3': '자급제폰',\n",
+       "   'category4': ''},\n",
+       "  {'title': 'Apple <b>아이폰</b> 14 128GB [자급제]',\n",
+       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=34561821618',\n",
+       "   'image': 'https://shopping-phinf.pstatic.net/main_3456182/34561821618.20230313112837.jpg',\n",
+       "   'lprice': '1050000',\n",
+       "   'hprice': '',\n",
+       "   'mallName': '네이버',\n",
+       "   'productId': '34561821618',\n",
+       "   'productType': '1',\n",
+       "   'brand': 'Apple',\n",
+       "   'maker': 'Apple',\n",
+       "   'category1': '디지털/가전',\n",
+       "   'category2': '휴대폰',\n",
+       "   'category3': '자급제폰',\n",
+       "   'category4': ''},\n",
+       "  {'title': '애플 정품 20W 충전기 어댑터 고속 C타입 급속(<b>아이폰</b> 5W 18W 애플워치 에어팟 호환)',\n",
+       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=83762501308',\n",
+       "   'image': 'https://shopping-phinf.pstatic.net/main_8376250/83762501308.3.jpg',\n",
+       "   'lprice': '17600',\n",
+       "   'hprice': '',\n",
+       "   'mallName': '예삐호삐 스토어',\n",
+       "   'productId': '83762501308',\n",
+       "   'productType': '2',\n",
+       "   'brand': 'Apple',\n",
+       "   'maker': 'Apple',\n",
+       "   'category1': '디지털/가전',\n",
+       "   'category2': '휴대폰액세서리',\n",
+       "   'category3': '휴대폰충전기',\n",
+       "   'category4': '충전기'},\n",
+       "  {'title': 'Apple <b>아이폰</b> 14 프로 128GB [자급제]',\n",
+       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=34558906623',\n",
+       "   'image': 'https://shopping-phinf.pstatic.net/main_3455890/34558906623.20220929142304.jpg',\n",
+       "   'lprice': '1392000',\n",
+       "   'hprice': '',\n",
+       "   'mallName': '네이버',\n",
+       "   'productId': '34558906623',\n",
+       "   'productType': '1',\n",
+       "   'brand': 'Apple',\n",
+       "   'maker': 'Apple',\n",
+       "   'category1': '디지털/가전',\n",
+       "   'category2': '휴대폰',\n",
+       "   'category3': '자급제폰',\n",
+       "   'category4': ''},\n",
+       "  {'title': '만렙 <b>아이폰</b> 무선충전기 애플워치 에어팟 3in1 호환',\n",
+       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=82627738066',\n",
+       "   'image': 'https://shopping-phinf.pstatic.net/main_8262773/82627738066.7.jpg',\n",
+       "   'lprice': '32900',\n",
+       "   'hprice': '',\n",
+       "   'mallName': 'manlab. 만렙 공식몰',\n",
+       "   'productId': '82627738066',\n",
+       "   'productType': '2',\n",
+       "   'brand': '만렙',\n",
+       "   'maker': '더코너스톤',\n",
+       "   'category1': '디지털/가전',\n",
+       "   'category2': '휴대폰액세서리',\n",
+       "   'category3': '휴대폰충전기',\n",
+       "   'category4': '충전기'},\n",
+       "  {'title': '로랜텍 <b>아이폰</b> 충전기 C to 8핀 고속케이블 세트',\n",
+       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=33706123618',\n",
+       "   'image': 'https://shopping-phinf.pstatic.net/main_3370612/33706123618.20220727024753.jpg',\n",
+       "   'lprice': '10900',\n",
+       "   'hprice': '',\n",
+       "   'mallName': '네이버',\n",
+       "   'productId': '33706123618',\n",
+       "   'productType': '1',\n",
+       "   'brand': '로랜텍',\n",
+       "   'maker': '로랜텍',\n",
+       "   'category1': '디지털/가전',\n",
+       "   'category2': '휴대폰액세서리',\n",
+       "   'category3': '휴대폰충전기',\n",
+       "   'category4': '충전기'},\n",
+       "  {'title': '로랜텍 맥세이프 고속 무선 충전기',\n",
+       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=36928472618',\n",
+       "   'image': 'https://shopping-phinf.pstatic.net/main_3692847/36928472618.20230428000954.jpg',\n",
+       "   'lprice': '29800',\n",
+       "   'hprice': '',\n",
+       "   'mallName': '네이버',\n",
+       "   'productId': '36928472618',\n",
+       "   'productType': '1',\n",
+       "   'brand': '로랜텍',\n",
+       "   'maker': '로랜텍',\n",
+       "   'category1': '디지털/가전',\n",
+       "   'category2': '휴대폰액세서리',\n",
+       "   'category3': '휴대폰충전기',\n",
+       "   'category4': '충전기'},\n",
+       "  {'title': '이쏘코리아 맥세이프 충전기 3in1 무선충전기 <b>아이폰</b> 애플워치 에어팟',\n",
+       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=83583712454',\n",
+       "   'image': 'https://shopping-phinf.pstatic.net/main_8358371/83583712454.8.jpg',\n",
+       "   'lprice': '32500',\n",
+       "   'hprice': '',\n",
+       "   'mallName': '이쏘코리아',\n",
+       "   'productId': '83583712454',\n",
+       "   'productType': '2',\n",
+       "   'brand': '이쏘코리아',\n",
+       "   'maker': '이쏘코리아',\n",
+       "   'category1': '디지털/가전',\n",
+       "   'category2': '휴대폰액세서리',\n",
+       "   'category3': '휴대폰충전기',\n",
+       "   'category4': '충전기'},\n",
+       "  {'title': 'Apple <b>아이폰</b> 13 미니 128GB [자급제]',\n",
+       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=29030650586',\n",
+       "   'image': 'https://shopping-phinf.pstatic.net/main_2903065/29030650586.20220317113150.jpg',\n",
+       "   'lprice': '869250',\n",
+       "   'hprice': '',\n",
+       "   'mallName': '네이버',\n",
+       "   'productId': '29030650586',\n",
+       "   'productType': '1',\n",
+       "   'brand': 'Apple',\n",
+       "   'maker': 'Apple',\n",
+       "   'category1': '디지털/가전',\n",
+       "   'category2': '휴대폰',\n",
+       "   'category3': '자급제폰',\n",
+       "   'category4': ''},\n",
+       "  {'title': '더블디 <b>아이폰</b> 고속충전기 12W 듀얼 2.4A',\n",
+       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=21054480157',\n",
+       "   'image': 'https://shopping-phinf.pstatic.net/main_2105448/21054480157.20191010160315.jpg',\n",
+       "   'lprice': '6000',\n",
+       "   'hprice': '',\n",
+       "   'mallName': '네이버',\n",
+       "   'productId': '21054480157',\n",
+       "   'productType': '1',\n",
+       "   'brand': '더블디',\n",
+       "   'maker': '더블디',\n",
+       "   'category1': '디지털/가전',\n",
+       "   'category2': '휴대폰액세서리',\n",
+       "   'category3': '휴대폰충전기',\n",
+       "   'category4': '충전기'}]}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests #서버에서 데이터를 가져오는 라이브러리\n",
+    "import pprint\n",
+    "\n",
+    "client_key = 'bgpVYzs7UVlAK9_jz93d'\n",
+    "client_secret = 'FmRMdVi_UU'\n",
+    "\n",
+    "naver_open_api = 'https://openapi.naver.com/v1/search/shop.json?query=iphone'\n",
+    "\n",
+    "#client_key와 client_secret은 header에 담아서 전송해야한다.\n",
+    "header_params = {\"X-Naver-Client-Id\":client_key,\"X-Naver-Client-Secret\":client_secret}\n",
+    "res = requests.get(naver_open_api, headers= header_params) #header에 default내용 + 추가 데이터를 추가해서 전송\n",
+    "\n",
+    "if res.statud_code == 200:\n",
+    "    data = res.json()\n",
+    "    print(data)\n",
+    "else:\n",
+    "    print(\"error code:\" , res.statud_code)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -302,7 +625,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.13"
   },
   "nbTranslate": {
    "displayLangs": [
