string 함수, 공공데이터 open api 활용 예제, excel파일로 정리한 naver open api활용 예제파일 업로드

--- a/crawling/crawling_openapi.ipynb
+++ b/crawling/crawling_openapi.ipynb
@@ -351,166 +351,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'lastBuildDate': 'Fri, 16 Jun 2023 13:57:41 +0900',\n",
-       " 'total': 12333741,\n",
-       " 'start': 1,\n",
-       " 'display': 10,\n",
-       " 'items': [{'title': 'Apple <b>아이폰</b> 14 프로 256GB [자급제]',\n",
-       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=34561756621',\n",
-       "   'image': 'https://shopping-phinf.pstatic.net/main_3456175/34561756621.20220929142551.jpg',\n",
-       "   'lprice': '1566170',\n",
-       "   'hprice': '',\n",
-       "   'mallName': '네이버',\n",
-       "   'productId': '34561756621',\n",
-       "   'productType': '1',\n",
-       "   'brand': 'Apple',\n",
-       "   'maker': 'Apple',\n",
-       "   'category1': '디지털/가전',\n",
-       "   'category2': '휴대폰',\n",
-       "   'category3': '자급제폰',\n",
-       "   'category4': ''},\n",
-       "  {'title': 'Apple <b>아이폰</b> 14 128GB [자급제]',\n",
-       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=34561821618',\n",
-       "   'image': 'https://shopping-phinf.pstatic.net/main_3456182/34561821618.20230313112837.jpg',\n",
-       "   'lprice': '1050000',\n",
-       "   'hprice': '',\n",
-       "   'mallName': '네이버',\n",
-       "   'productId': '34561821618',\n",
-       "   'productType': '1',\n",
-       "   'brand': 'Apple',\n",
-       "   'maker': 'Apple',\n",
-       "   'category1': '디지털/가전',\n",
-       "   'category2': '휴대폰',\n",
-       "   'category3': '자급제폰',\n",
-       "   'category4': ''},\n",
-       "  {'title': '애플 정품 20W 충전기 어댑터 고속 C타입 급속(<b>아이폰</b> 5W 18W 애플워치 에어팟 호환)',\n",
-       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=83762501308',\n",
-       "   'image': 'https://shopping-phinf.pstatic.net/main_8376250/83762501308.3.jpg',\n",
-       "   'lprice': '17600',\n",
-       "   'hprice': '',\n",
-       "   'mallName': '예삐호삐 스토어',\n",
-       "   'productId': '83762501308',\n",
-       "   'productType': '2',\n",
-       "   'brand': 'Apple',\n",
-       "   'maker': 'Apple',\n",
-       "   'category1': '디지털/가전',\n",
-       "   'category2': '휴대폰액세서리',\n",
-       "   'category3': '휴대폰충전기',\n",
-       "   'category4': '충전기'},\n",
-       "  {'title': 'Apple <b>아이폰</b> 14 프로 128GB [자급제]',\n",
-       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=34558906623',\n",
-       "   'image': 'https://shopping-phinf.pstatic.net/main_3455890/34558906623.20220929142304.jpg',\n",
-       "   'lprice': '1392000',\n",
-       "   'hprice': '',\n",
-       "   'mallName': '네이버',\n",
-       "   'productId': '34558906623',\n",
-       "   'productType': '1',\n",
-       "   'brand': 'Apple',\n",
-       "   'maker': 'Apple',\n",
-       "   'category1': '디지털/가전',\n",
-       "   'category2': '휴대폰',\n",
-       "   'category3': '자급제폰',\n",
-       "   'category4': ''},\n",
-       "  {'title': '만렙 <b>아이폰</b> 무선충전기 애플워치 에어팟 3in1 호환',\n",
-       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=82627738066',\n",
-       "   'image': 'https://shopping-phinf.pstatic.net/main_8262773/82627738066.7.jpg',\n",
-       "   'lprice': '32900',\n",
-       "   'hprice': '',\n",
-       "   'mallName': 'manlab. 만렙 공식몰',\n",
-       "   'productId': '82627738066',\n",
-       "   'productType': '2',\n",
-       "   'brand': '만렙',\n",
-       "   'maker': '더코너스톤',\n",
-       "   'category1': '디지털/가전',\n",
-       "   'category2': '휴대폰액세서리',\n",
-       "   'category3': '휴대폰충전기',\n",
-       "   'category4': '충전기'},\n",
-       "  {'title': '로랜텍 <b>아이폰</b> 충전기 C to 8핀 고속케이블 세트',\n",
-       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=33706123618',\n",
-       "   'image': 'https://shopping-phinf.pstatic.net/main_3370612/33706123618.20220727024753.jpg',\n",
-       "   'lprice': '10900',\n",
-       "   'hprice': '',\n",
-       "   'mallName': '네이버',\n",
-       "   'productId': '33706123618',\n",
-       "   'productType': '1',\n",
-       "   'brand': '로랜텍',\n",
-       "   'maker': '로랜텍',\n",
-       "   'category1': '디지털/가전',\n",
-       "   'category2': '휴대폰액세서리',\n",
-       "   'category3': '휴대폰충전기',\n",
-       "   'category4': '충전기'},\n",
-       "  {'title': '로랜텍 맥세이프 고속 무선 충전기',\n",
-       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=36928472618',\n",
-       "   'image': 'https://shopping-phinf.pstatic.net/main_3692847/36928472618.20230428000954.jpg',\n",
-       "   'lprice': '29800',\n",
-       "   'hprice': '',\n",
-       "   'mallName': '네이버',\n",
-       "   'productId': '36928472618',\n",
-       "   'productType': '1',\n",
-       "   'brand': '로랜텍',\n",
-       "   'maker': '로랜텍',\n",
-       "   'category1': '디지털/가전',\n",
-       "   'category2': '휴대폰액세서리',\n",
-       "   'category3': '휴대폰충전기',\n",
-       "   'category4': '충전기'},\n",
-       "  {'title': '이쏘코리아 맥세이프 충전기 3in1 무선충전기 <b>아이폰</b> 애플워치 에어팟',\n",
-       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=83583712454',\n",
-       "   'image': 'https://shopping-phinf.pstatic.net/main_8358371/83583712454.8.jpg',\n",
-       "   'lprice': '32500',\n",
-       "   'hprice': '',\n",
-       "   'mallName': '이쏘코리아',\n",
-       "   'productId': '83583712454',\n",
-       "   'productType': '2',\n",
-       "   'brand': '이쏘코리아',\n",
-       "   'maker': '이쏘코리아',\n",
-       "   'category1': '디지털/가전',\n",
-       "   'category2': '휴대폰액세서리',\n",
-       "   'category3': '휴대폰충전기',\n",
-       "   'category4': '충전기'},\n",
-       "  {'title': 'Apple <b>아이폰</b> 13 미니 128GB [자급제]',\n",
-       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=29030650586',\n",
-       "   'image': 'https://shopping-phinf.pstatic.net/main_2903065/29030650586.20220317113150.jpg',\n",
-       "   'lprice': '869250',\n",
-       "   'hprice': '',\n",
-       "   'mallName': '네이버',\n",
-       "   'productId': '29030650586',\n",
-       "   'productType': '1',\n",
-       "   'brand': 'Apple',\n",
-       "   'maker': 'Apple',\n",
-       "   'category1': '디지털/가전',\n",
-       "   'category2': '휴대폰',\n",
-       "   'category3': '자급제폰',\n",
-       "   'category4': ''},\n",
-       "  {'title': '더블디 <b>아이폰</b> 고속충전기 12W 듀얼 2.4A',\n",
-       "   'link': 'https://search.shopping.naver.com/gate.nhn?id=21054480157',\n",
-       "   'image': 'https://shopping-phinf.pstatic.net/main_2105448/21054480157.20191010160315.jpg',\n",
-       "   'lprice': '6000',\n",
-       "   'hprice': '',\n",
-       "   'mallName': '네이버',\n",
-       "   'productId': '21054480157',\n",
-       "   'productType': '1',\n",
-       "   'brand': '더블디',\n",
-       "   'maker': '더블디',\n",
-       "   'category1': '디지털/가전',\n",
-       "   'category2': '휴대폰액세서리',\n",
-       "   'category3': '휴대폰충전기',\n",
-       "   'category4': '충전기'}]}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Apple <b>아이폰</b> 14 프로 256GB [자급제] https://search.shopping.naver.com/gate.nhn?id=34561756621\n",
+      "2 Apple <b>아이폰</b> 14 128GB [자급제] https://search.shopping.naver.com/gate.nhn?id=34561821618\n",
+      "3 애플 정품 20W 충전기 어댑터 고속 C타입 급속(<b>아이폰</b> 5W 18W 애플워치 에어팟 호환) https://search.shopping.naver.com/gate.nhn?id=83762501308\n",
+      "4 Apple <b>아이폰</b> 14 프로 128GB [자급제] https://search.shopping.naver.com/gate.nhn?id=34558906623\n",
+      "5 만렙 <b>아이폰</b> 무선충전기 애플워치 에어팟 3in1 호환 https://search.shopping.naver.com/gate.nhn?id=82627738066\n",
+      "6 로랜텍 <b>아이폰</b> 충전기 C to 8핀 고속케이블 세트 https://search.shopping.naver.com/gate.nhn?id=33706123618\n",
+      "7 로랜텍 맥세이프 고속 무선 충전기 https://search.shopping.naver.com/gate.nhn?id=36928472618\n",
+      "8 이쏘코리아 맥세이프 충전기 3in1 무선충전기 <b>아이폰</b> 애플워치 에어팟 https://search.shopping.naver.com/gate.nhn?id=83583712454\n",
+      "9 Apple <b>아이폰</b> 13 미니 128GB [자급제] https://search.shopping.naver.com/gate.nhn?id=29030650586\n",
+      "10 더블디 <b>아이폰</b> 고속충전기 12W 듀얼 2.4A https://search.shopping.naver.com/gate.nhn?id=21054480157\n"
+     ]
     }
    ],
    "source": [
     "import requests #서버에서 데이터를 가져오는 라이브러리\n",
-    "import pprint\n",
+    "import pprint #print를 좀더 구조적으로 보여주는 라이브러리\n",
     "\n",
     "client_key = 'bgpVYzs7UVlAK9_jz93d'\n",
     "client_secret = 'FmRMdVi_UU'\n",
@@ -521,9 +384,11 @@
     "header_params = {\"X-Naver-Client-Id\":client_key,\"X-Naver-Client-Secret\":client_secret}\n",
     "res = requests.get(naver_open_api, headers= header_params) #header에 default내용 + 추가 데이터를 추가해서 전송\n",
     "\n",
-    "if res.statud_code == 200:\n",
+    "if res.status_code == 200:\n",
     "    data = res.json()\n",
-    "    print(data)\n",
+    "    #pprint.pprint(data)\n",
+    "    for index,item in enumerate(data['items']): #range 보다 조금더 개선된 enumerate\n",
+    "        print(index + 1 ,item['title'], item['link'])\n",
     "else:\n",
     "    print(\"error code:\" , res.statud_code)\n"
    ]
@@ -609,11 +474,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  네이버쇼핑에서 원하는 데이터를 가져와서 엑셀화하여 보고서 작성하기\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests \n",
+    "import openpyxl\n",
+    "\n",
+    "client_key = 'bgpVYzs7UVlAK9_jz93d'\n",
+    "client_secret = 'FmRMdVi_UU'\n",
+    "\n",
+    "#client_key와 client_secret은 header에 담아서 전송해야한다.\n",
+    "header_params = {\"X-Naver-Client-Id\":client_key,\"X-Naver-Client-Secret\":client_secret}\n",
+    "res = requests.get(naver_open_api, headers= header_params) #header에 default내용 + 추가 데이터를 추가해서 전송\n",
+    "\n",
+    "excel_file = openpyxl.Workbook()\n",
+    "excel_sheet = excel_file.active\n",
+    "excel_sheet.column_dimensions['B'].width = 100\n",
+    "excel_sheet.column_dimensions['C'].width = 100\n",
+    "excel_sheet.append(['랭킹','제목','링크'])\n",
+    "\n",
+    "\n",
+    "#검색결과를 1000개까지 가져오기위해 for문 사용\n",
+    "start,num = 1, 0 #tuple자료형으로 인식\n",
+    "for index in range(10):\n",
+    "    start_num = start +(index * 100)\n",
+    "    naver_open_api = 'https://openapi.naver.com/v1/search/shop.json?query=iphone&display=100&start=' + str(start_num)\n",
+    "    if res.status_code == 200:\n",
+    "        data = res.json()\n",
+    "        #pprint.pprint(data)\n",
+    "        for item in data['items']: #range 보다 조금더 개선된 enumerate\n",
+    "            num += 1\n",
+    "            excel_sheet.append([num ,item['title'], item['link']])\n",
+    "    else:\n",
+    "        print(\"error code:\" , res.statud_code)\n",
+    "\n",
+    "        \n",
+    "excel_file.save('shopping_with_iphone.xlsx')\n",
+    "excel_file.close()"
+   ]
   },
   {
    "cell_type": "code",
