정규표현식, string function, 기능 복습

--- a/crawling/stringfunction.ipynb
+++ b/crawling/stringfunction.ipynb
@@ -38,11 +38,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = 'Big Data'\n",
+    "data.count('D')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "* 간단 연습: string에 v 는 몇 번 나올까?\n",
     "* 간단 연습: string에 vid 는 몇 번 나올까? (꼭 문자 하나만 되는 것이 아니라, 연결된 문자열도 가능)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = 'Dave David'\n",
+    "x = data.count('x')\n",
+    "vid = data.count('vid')\n",
+    "\n",
+    "print(x,vid)"
    ]
   },
   {
@@ -76,6 +118,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = '나는 무조건 성장하는 개발자이다'\n",
+    "text.index('장')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -101,6 +164,28 @@
    "source": [
     "* 간단 연습: string에 있는 D의 위치 확인하기 (가장 먼저 나오는 위치를 알려줌)\n",
     "* 간단 연습: string에 x의 위치 확인하기 (해당 문자가 없으면 에러가 남)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = 'Dave ID is dave'\n",
+    "\n",
+    "string.index('I')"
    ]
   },
   {
@@ -135,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -144,20 +229,21 @@
        "-1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "string = 'dave is david'\n",
+    "\n",
     "string.find('x')\n",
-    "\n"
+    "#string.find('i')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +259,7 @@
     "string.find('D ')    # 맨 앞 자리부터 0, 1, ... 순으로 위치를 표시\n",
     "\n",
     "if string.find('x') == -1:\n",
-    "    print (\"x는 스트링에 없습니다.\")"
+    "    print (\"x는 스트링에 없습니다.\")\n"
    ]
   },
   {
@@ -181,6 +267,28 @@
    "metadata": {},
    "source": [
     "* 간단 연습: string에 d의 위치 확인하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'David beckham was soccer player'\n",
+    "\n",
+    "if string.find('d') == -1:\n",
+    "    print('d문자가 존재하지않습니다.')\n",
+    "else:\n",
+    "    print(string.find('d'))"
    ]
   },
   {
@@ -220,11 +328,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'t...h...i...s... ...i...s... ...p...r...a...c...t...i...c...e'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = 'this is practice'\n",
+    "add = '...'\n",
+    "\n",
+    "add.join(text)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 문자열 앞뒤에 공백 지우기\n",
     "* 실제 현실 세계에 있는 문자열 데이터를 정리하다보면, 문자열 앞뒤에 공백 또는 기호가 있는 경우가 많음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'today is my birthday'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real_text = 'today is my birthday?'\n",
+    "\n",
+    "real_text.strip('?')"
    ]
   },
   {
@@ -328,6 +481,27 @@
    "source": [
     "string = \"      9999999999999999(Dave)888888888888888888     \"\n",
     "string.strip(\" 98()\")        # 앞 뒤 괄호를 다 지움"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'name'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \" 3333 name[000000][[[[]]]]]],,,,,,\"\n",
+    "text.strip(' 3[0],')"
    ]
   },
   {
@@ -445,20 +619,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -513,6 +673,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"10,11,22,33,44\"\n",
+    "\n",
+    "datas = string.split(',')\n",
+    "for data in datas:\n",
+    "    if(int(data) == 11):\n",
+    "        print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -534,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -552,6 +734,88 @@
     "for index, listitem in enumerate(listdata): #enumerate를 통해 index번호는 index객체에 , 실제값은 listitem에 들어감\n",
     "    listdata[index] = int(listitem)\n",
     "print (listdata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iter_letters = iter(['A', 'B', 'C'])\n",
+    "next(iter_letters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'B'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(iter_letters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(iter_letters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/3w/3fgbsfvd3vz0f0ybpdxgm0f40000gn/T/ipykernel_9531/506343496.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miter_letters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "next(iter_letters)"
    ]
   },
   {
@@ -698,6 +962,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/11/22/33/44\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"10,11,22,33,44\"\n",
+    "\n",
+    "answer = string.replace(\",\",\"/\")\n",
+    "\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -716,13 +1001,6 @@
     "string = \"10,11,22,33,44\"\n",
     "string.replace(\",\", \" \")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
