--- a/crawling_project/crawling_toy_project_review.ipynb
+++ b/crawling_project/crawling_toy_project_review.ipynb
@@ -522,12 +522,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a6e5e82",
+   "metadata": {},
+   "source": [
+    "7단계: 자동 줄바꿈과 볼드체 폰트 적용하기"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c14fee63",
+   "execution_count": 4,
+   "id": "d02d41d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests, openpyxl\n",
+    "from bs4 import BeautifulSoup\n",
+    "from openpyxl.styles import Alignment, Font\n",
+    "\n",
+    "#엑셀\n",
+    "excel_file = openpyxl.Workbook()\n",
+    "excel_sheet = excel_file.active\n",
+    "#폰트,정렬등 엑셀 설정\n",
+    "wrap_alignment = Alignment(wrap_text=True)\n",
+    "bold_font = Font(bold=True)\n",
+    "header_font = Font(bold=True, size=20)\n",
+    "\n",
+    "\n",
+    "# active 시트 이름 변경\n",
+    "excel_sheet.title = 'toy_crawling'\n",
+    "header=[\"No\",\"타이틀 설명\",\"댓글수\"]\n",
+    "#header 글씨만 bold설정, 및 글씨 크기 키움\n",
+    "for cell in excel_sheet[1]:\n",
+    "    cell.font = header_font\n",
+    "\n",
+    "excel_sheet.append(header)\n",
+    "excel_sheet.column_dimensions['A'].width= 20\n",
+    "excel_sheet.column_dimensions['B'].width= 100\n",
+    "excel_sheet.column_dimensions['C'].width= 20\n",
+    "\n",
+    "\n",
+    "#크롤링 \n",
+    "res = requests.get('https://davelee-fun.github.io/trial/board/lecture')\n",
+    "soup = BeautifulSoup(res.content, 'html.parser')\n",
+    "titles = soup.select('div.list_item')\n",
+    "index = 0\n",
+    "row = 2\n",
+    "\n",
+    "#다섯개만 가져오기\n",
+    "for title in titles[3:9]:\n",
+    "    title_text = title.select_one('span.subject_fixed')\n",
+    "    title_replies = title.select_one('span.rSymph05')\n",
+    "    title_link = title.select_one('a.list_subject')\n",
+    "    common_url = 'https://davelee-fun.github.io/trial/board/'\n",
+    "    \n",
+    "    #Nonetype object 에러가 뜨지 않기위해 if문으로 제약조건을 걸어서 데이터가 없는경우 출력 X\n",
+    "    if title_text != None:\n",
+    "        #데이터가 없는경우는 출력하지않기위해서 제약조건에 맞는경우에만 Index번호가 1씩증가하도록 설정\n",
+    "        index += 1\n",
+    "        title_link_url = 'https://davelee-fun.github.io/trial/board/' + title_link['href']\n",
+    "        res_reply = requests.get(title_link_url)\n",
+    "        res_reply_soup = BeautifulSoup(res_reply.content, 'html.parser')\n",
+    "        title_in_reply = res_reply_soup.select('div.comment_content')\n",
+    "        #댓글이 없는 경우 Nonetype이 되지않기위해 try catch로 감싸서 주고 None인 경우에는 0으로 출력되기 설정\n",
+    "        try:\n",
+    "            title_data = [index,title_text.get_text().strip(),\"댓글수 :\",title_replies.get_text(),\"\\n\",\"링크 :\",\n",
+    "                  title_link_url]\n",
+    "            excel_sheet.append(title_data)\n",
+    "            #두번째 row를 for문을 통해서 정렬과,bold\n",
+    "            for cell in excel_sheet[row]:\n",
+    "                cell.alignment = wrap_alignment\n",
+    "                cell.font = bold_font\n",
+    "            row += 1\n",
+    "        except Exception as e:\n",
+    "            if title_replies == None:\n",
+    "                title_data =[index,title_text.get_text().strip(),\"댓글수 :\",0,\"\\n\",\"링크 :\",title_link_url]\n",
+    "                excel_sheet.append(title_data)\n",
+    "            continue\n",
+    "       \n",
+    "        for reply_text in title_in_reply:\n",
+    "            title_data_reply = [\"댓글 : \",reply_text.get_text().strip().replace(\"\\n\",\"\").replace(\"\\t\",\"\")]\n",
+    "            excel_sheet.append(title_data_reply)\n",
+    "            #댓글 정렬\n",
+    "            for cell in excel_sheet[row]:\n",
+    "                cell.alignment = wrap_alignment\n",
+    "            row += 1\n",
+    "            \n",
+    "            \n",
+    "excel_file.save('crawling_excel.xlsx')\n",
+    "excel_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b440bf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "8단계: 링크 넣기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f9b5cb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "9 단계: 링크를 가진 게시글 제목 색상과 밑줄 넣기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "561a26c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "10단계: 셀에 border (선) 넣고, 게시글제목 행 색상 넣기"
+   ]
   }
  ],
  "metadata": {
